--- a/socket_study/CMakeLists.txt
+++ b/socket_study/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_executable(tcp_client tcp_client.cpp)
 add_executable(tcp_server tcp_server.cpp)
+add_executable(tcp_process_server tcp_process_server.cpp wrap.cpp)
