--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.20)
 
 set(PROJECT_NAME UNIXNetworkTest)
 project(${PROJECT_NAME})
-add_subdirectory(socket_study bin)
+add_subdirectory(poll_study bin)
