--- a/epoll_study/CMakeLists.txt
+++ b/epoll_study/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(epoll_server epoll_server.cpp wrap.cpp)
+add_executable(epoll_server_edge_triggered epoll_server_edge_triggered.cpp wrap.cpp)
 
 add_executable(pipe_epoll pipe_epoll.cpp)
