--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.20)
 
 set(PROJECT_NAME UNIXNetworkTest)
+
 project(${PROJECT_NAME})
-add_subdirectory(epoll_reactor bin)
+add_subdirectory(epoll_study bin)
