--- a/epoll_study/CMakeLists.txt
+++ b/epoll_study/CMakeLists.txt
@@ -3,3 +3,15 @@ add_executable(epoll_server_edge_triggered epoll_server_edge_triggered.cpp wrap.
 add_executable(epoll_server_edge_triggered_exp epoll_server_edge_triggered_exp.cpp)
 
 add_executable(pipe_epoll pipe_epoll.cpp)
+
+
+
+add_executable(epoll_server_edge_triggered_thread_pool
+        epoll_server_edge_triggered_thread_pool.cpp
+        thread_pool_yjs.cpp
+        wrap.cpp
+
+        )
+
+
+target_link_libraries(epoll_server_edge_triggered_thread_pool pthread)
