--- a/libevent_study/CMakeLists.txt
+++ b/libevent_study/CMakeLists.txt
@@ -1,5 +1,10 @@
 add_executable(hello-world hello-world.c)
 add_executable(demo demo.c)
+add_executable(libevent_tcp_server libevent_tcp_server.cpp wrap.cpp)
+add_executable(bufferevent_server bufferevent_server.cpp)
+
 
 target_link_libraries(hello-world event)
 target_link_libraries(demo event)
+target_link_libraries(libevent_tcp_server event)
+target_link_libraries(bufferevent_server event)
