--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required(VERSION 3.20)
 set(PROJECT_NAME UNIXNetworkTest)
 
 project(${PROJECT_NAME})
-add_subdirectory(libevent_study bin)
+add_subdirectory(webserver bin)
