--- a/webserver/CMakeLists.txt
+++ b/webserver/CMakeLists.txt
@@ -1,4 +1,8 @@
 add_executable(epoll_webserver
         epoll_webserver.cpp
         wrap.cpp
+        pub.cpp
+        urlencode_urldecode.cpp
         )
+
+add_executable(test test.cpp)
