--- a/webserver/CMakeLists.txt
+++ b/webserver/CMakeLists.txt
@@ -4,3 +4,11 @@ add_executable(epoll_webserver
         urlencode_urldecode.cpp
         )
 
+add_executable(event_webserver
+        event_webserver.cpp
+        urlencode_urldecode.cpp
+
+        )
+
+
+target_link_libraries(event_webserver event)
