--- a/udp_echo_server/CMakeLists.txt
+++ b/udp_echo_server/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_executable(udp_clint udp_clint.cpp)
 add_executable(udp_server udp_server.cpp)
 add_executable(sig_io sig_io.c)
+add_executable(dgecholoop1 dgecholoop1.cpp wrap.cpp)
+
+add_executable(udp_tcp_select_server udp_tcp_select_server.cpp wrap.cpp)
