--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ set(PROJECT_NAME UNIXNetworkTest)
 set(CMAKE_CXX_STANDARD 17)
 
 project(${PROJECT_NAME})
-add_subdirectory(udp_echo_server bin)
+add_subdirectory(websocket bin)
