--- a/epoll_reactor/CMakeLists.txt
+++ b/epoll_reactor/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(reactor_class reactor_class.cpp wrap.cpp)
 add_executable(reactor reactor.cpp wrap.cpp)
-
+add_executable(epoll_reactor epoll_reactor.cpp)
 
 
 
